--- a/index.html
+++ b/index.html
@@ -329,6 +329,46 @@
 <!-- Footer -->
 
   <footer id="footer">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about-us">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#events">Events and Notifications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#student">Student</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Staff
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#principal">Pricipal</a></li>
+              <li><a class="dropdown-item" href="#hod">HOD</a></li>
+              <li><a class="dropdown-item" href="#faculty">Faculty</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#library">Library</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#exam">Examination Section</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#office">College office</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#placement">Placement Department</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <p>© Copyright 2021 Information Science and Engineering</p>
   </footer>
 </body>
